[gd_scene load_steps=8 format=2]

[ext_resource path="res://res/buttons/BackButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/buttons/FowardButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://res/Font/montserrat_48.tres" type="DynamicFont" id=4]
[ext_resource path="res://res/Font/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://res/popups/popup_rules.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 5 )

[node name="PopupRules" type="Popup"]
margin_left = 500.0
margin_top = 88.0
margin_right = 1160.0
margin_bottom = 638.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 660.0
margin_bottom = 550.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_top = 220.0
margin_right = 80.0
margin_bottom = 300.0
rect_rotation = 45.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 638.0
margin_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Menu"]
margin_right = 618.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 4 )
text = "REGRAS DO JOGO"
align = 1

[node name="FirstPage" type="HBoxContainer" parent="Menu"]
margin_top = 64.0
margin_right = 618.0
margin_bottom = 466.0
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Menu/FirstPage"]
margin_right = 307.0
margin_bottom = 402.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/FirstPage/CenterContainer"]
margin_left = 65.0
margin_top = 113.0
margin_right = 241.0
margin_bottom = 289.0
rect_min_size = Vector2( 176, 176 )
texture = ExtResource( 3 )
stretch_mode = 1

[node name="Label" type="Label" parent="Menu/FirstPage"]
margin_left = 311.0
margin_right = 618.0
margin_bottom = 402.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Lorem ipsum dolor sit amet, consecteturasd adipiscing elit, sed do eiusmod tempor dsdd tincidunt tortordddd Lorem ipsum dolor sit amet, consectetur dd  nulla facilisi."
align = 3
valign = 1
autowrap = true
uppercase = true

[node name="SecondPage" type="HBoxContainer" parent="Menu"]
visible = false
margin_top = 64.0
margin_right = 618.0
margin_bottom = 466.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Menu/SecondPage"]
margin_right = 307.0
margin_bottom = 402.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Lorem ipsum dolor sit amet, consecteturasd adipiscing elit, sed do eiusmod tempor dsdd tincidunt tortordddd Lorem ipsum dolor sit amet, consectetur dd  nulla facilisi."
align = 3
valign = 1
autowrap = true
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="Menu/SecondPage"]
margin_left = 311.0
margin_right = 618.0
margin_bottom = 402.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/SecondPage/CenterContainer"]
margin_left = 65.0
margin_top = 113.0
margin_right = 241.0
margin_bottom = 289.0
rect_min_size = Vector2( 176, 176 )
texture = ExtResource( 3 )
stretch_mode = 1

[node name="ThirdPage" type="HBoxContainer" parent="Menu"]
visible = false
margin_top = 64.0
margin_right = 618.0
margin_bottom = 466.0
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Menu/ThirdPage"]
margin_right = 307.0
margin_bottom = 402.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/ThirdPage/CenterContainer"]
margin_left = 65.0
margin_top = 113.0
margin_right = 241.0
margin_bottom = 289.0
rect_min_size = Vector2( 176, 176 )
texture = ExtResource( 3 )
stretch_mode = 1

[node name="Label" type="Label" parent="Menu/ThirdPage"]
margin_left = 311.0
margin_right = 618.0
margin_bottom = 402.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Lorem ipsum dolor sit amet, consecteturasd adipiscing elit, sed do eiusmod tempor dsdd tincidunt tortordddd Lorem ipsum dolor sit amet, consectetur dd  nulla facilisi."
align = 3
valign = 1
autowrap = true
uppercase = true

[node name="Page" type="HBoxContainer" parent="Menu"]
margin_top = 470.0
margin_right = 618.0
margin_bottom = 530.0
alignment = 1

[node name="BackButton" parent="Menu/Page" instance=ExtResource( 1 )]
modulate = Color( 0.266667, 0.266667, 0.266667, 1 )
margin_left = 214.0
margin_right = 274.0

[node name="Label" type="Label" parent="Menu/Page"]
margin_left = 278.0
margin_right = 340.0
margin_bottom = 60.0
rect_min_size = Vector2( 62, 0 )
custom_fonts/font = ExtResource( 4 )
text = "01"
align = 1

[node name="FowardButton" parent="Menu/Page" instance=ExtResource( 2 )]
margin_left = 344.0
margin_right = 404.0
[connection signal="pressed" from="Menu/Page/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Menu/Page/FowardButton" to="." method="_on_FowardButton_pressed"]
